syntax = "proto3";

option go_package = "genproto/authentication";

package protos;

service Authentication {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc RefreshToken (TokenRequest) returns (TokenResponse);
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LogoutRequest {
    string email = 1;
}

message TokenRequest {
    
}

message RegisterResponse {
    
}

message LoginResponse {
    
}

message LogoutResponse {
    
}

message TokenResponse {
    
}